--- a/index.Rmd
+++ b/index.Rmd
@@ -15,22 +15,35 @@ csl: chicago-fullnote-bibliography.csl
 
 # このマニュアルについて {-}
 
+**【重要】このマニュアルは水圏植物生態学研究室用に準備しましたが、
+一部は水産学部の講義につかいます。**
 
-解析の背景については講義^[基礎統計学]で紹介した内容を参考にしてください。
-章ごとに解析を紹介しています。
-R コードが記述されている部分はコードブロックまたはコードチャンクと呼びます。
+解析の背景については講義^[基礎統計学]の資料やレクチャーを参考にしてください。
+解析は章ごとに紹介していて、コードはお互いに独立させたつもりです。
+それにしても、そのままコピペすると動かないコードもあるので、コードをよく読んでから使ってください。
+コードに使用したデータは研究室のサーバにあるが、公開するつもりはありません。
 
-章ごとのコードは独立していないので、注意してください。
-コードをそのままコピー・ペーストすると、うまく動かないことがあります^[バグ、bug]。
+このマニュアルは統計学や解析についての詳細に説明するつもりはないです。
+つまり、このマニュアルだけだと、コードをくめるようになるが、統計学の理解には不十分です！
+解析の背景は十分理解してから、コードを使ってください。
+さらに、コードは研究室のサーバ環境で動きますが、その他の環境で動くは確認していません。
 
-また、このマニュアルは R 環境における解析のコードを説明するためです^[いつか、説明も加えるつもりです]。
-このマニュアルだけだと、統計解析はできるが、統計学の理解には不十分です。
 最後に、マニュアルは随時更新するので、タイトルにあるバージョン番号を時々確認してね。
 わからないことまたは間違いがあれば、[メール](greg@nagasaki-u.ac.jp)で連絡ください。 
 
-研究室用のデータは RStudio の `~/Lab_Data/` に入っています。
+**研究室の皆さん：**研究室用のデータは RStudio の `~/Lab_Data/` に入っています。
+
+マニュアルの更新日：`r format(Sys.time(), "%x %T %Z")`
+
+## サーバ環境 {-}
+
+```{r}
+Sys.info()[c(1:3,5)]
+```
 
 ## マニュアルの作り方 {-}
+
+このマニュアルは `bookdown` パッケージで作成しました。
 
 HTMLバージョンのマニュアルは RStudio の **Build** パネルで組み立てます。
 
