Fixed more mistakes

--- a/24-analysis-glm.Rmd
+++ b/24-analysis-glm.Rmd
@@ -1,4 +1,4 @@
-# 一般化線形モデル {#glm}
+# 線形モデル {#linear-models}
 
 ## 必要なパッケージ
 
@@ -758,7 +758,6 @@ logSF2 %>% Anova(type = "III") %>% print(signif.stars = F)
 ところが，この結果まで導くには，5 種類のモデルを検証しました。$\alpha_\text{fwer}$ は
 $1 - (1-0.05)^5 = 0.2262$ ですので，$\alpha_\text{fwer}=0.05$ にしたければ，$\alpha = 0.0102$ に設定しなければなりません。このとき，`logArea` 以外の要因の効果は有意ではありません。
 
-################################################################################
 
 ## 一般化線形モデル
 
