--- a/book.bib
+++ b/book.bib
@@ -8,3 +8,15 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.org/knitr/},
 }
+@article{Nishihara2011,
+author = {Nishihara, Gregory N. and Terada, Ryuta and Shimabukuro, Hiromori},
+doi = {10.1111/j.1440-1835.2010.00595.x},
+file = {:home/gnishihara/Documents/Mendeley Desktop/Nishihara, Terada, Shimabukuro/Phycological Research/Nishihara, Terada, Shimabukuro - 2011 - Effects of wave energy on the residence times of a fluorescent tracer in the canopy of the inter.pdf:pdf},
+issn = {14401835},
+journal = {Phycological Research},
+number = {1},
+pages = {24--33},
+title = {{Effects of wave energy on the residence times of a fluorescent tracer in the canopy of the intertidal marine macroalgae, Sargassum fusiforme (Phaeophyceae)}},
+volume = {59},
+year = {2011}
+}
