--- a/50-maps.Rmd
+++ b/50-maps.Rmd
@@ -1,6 +1,6 @@
 # 地図の作り方 {#maps}
 
-```{r, include=FALSE}
+```{r, echo=FALSE}
 knitr::opts_chunk$set(cache = TRUE)
 ```
 
@@ -17,6 +17,7 @@ library(showtext)   # I want to use google fonts in the figures
 
 
 次の2つは地図専用のパッケージです。
+
 ```{r}
 library(ggspatial)  # Essential for map-making with ggplot
 library(sf)         # Essential for map data manipulation
